SVN from 0.70:
        - Fixed 'set' and 'add' commands (see ticket #102).
        - Added 'error' and 'warn' hook commands (see ticket #103).

0.70 from 0.69:
        - Rebuild: Merged DMD 1.020.
        - Should now trim whitespace in "name" (and other) settings (see
          ticket #93).
        - Now uses 'svn export' instead of 'svn co' (see ticket #96).
        - Will now always remove temporary directories, even if the build
          failed (I decided this wasn't worth the difficulty it causes).

0.69 from 0.68:
        - Added --test option to test built libraries.
        - Rebuild: Fixed an intermittent segfault on Windows.
        - Added --doc-binaries option to generate documentation for binary
          builds.
        - Fixed DSSS_Light build.

0.68 from 0.67:
        - Rebuild: -of<name> now converts / to \ on Windows (see ticket #85).
        - `dsss uninstall` now removes (empty) directories as well as files
          (see ticket #84).
        - Rebuild: Merged DMD 1.018.
        - Rebuild: Added proper documentation for -Dq (see ticket #90).
        - /etc will now be preferred to /usr/etc when installing to the prefix
          /usr.
        - Rebuild: Added -no-export-dynamic flag (see ticket #91).

0.67 from 0.66:
        - Rebuild: Fixed generation of libraries with DMD+GNU/Linux (see ticket
          #75).
        - Rebuild: Should now compile on FreeBSD (see ticket #82).
        - Added an option (--keep-response-files for DSSS and -keeprfiles for
          Rebuild) to not delete response files (see ticket #62).
        - Added the dsss.conf option 'defaultTargets' (see ticket #64).
        - Added an option to DSSS to manually specify the URL to receive the
          source list from (see ticket #77).

0.66 from 0.65:
        - Rebuild: Fixed a bug with -listnffiles and -of conflicting (see
          ticket #66).
        - Some dsss-net-installs which failed due to the above bug should
          now work (see ticket #66).