@@ -1,6 +1,7 @@
 SVN from 0.70:
         - Fixed 'set' and 'add' commands (see ticket #102).
         - Added 'error' and 'warn' hook commands (see ticket #103).
+        - Added 'binstall' subcommand (see ticket #105).
 
 0.70 from 0.69:
         - Rebuild: Merged DMD 1.020.
